--- a/URLauncherSample/app/src/main/res/values/strings.xml
+++ b/URLauncherSample/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">MYdemo</string>
-    <string name="mydemo">MYdemo</string>
+    <string name="app_name">URLauncherDemo</string>
+    <string name="mydemo">URLauncherDemo</string>
 </resources>
