重命名Launcher Demo 包名

--- a/URLauncherSample/app/src/main/res/values/strings.xml
+++ b/URLauncherSample/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">URLauncherDemo</string>
-    <string name="mydemo">URLauncherDemo</string>
+    <string name="ur_launcher_demo">URLauncherDemo</string>
 </resources>
